# A

./: .gitignore  A.cmake  A.code-workspace  A.i  CMakeLists.txt  Makefile  README.md  ast.cc  build  build.mk  cmake  deps  headers.sh  import  import.sh  import_header.sh  init.sh  intern.sh  macros.hpp  method.sh  preprocess_A.c  project.json  public.sh  silver
.github/workflows/: build.yml
A/: A.h
app/: A-generate.c  A-include.c  an-app.c  build
async/: async.cpp  async.hpp  tinycthread.c  tinycthread.h
image/: image.cpp  image.hpp  mod
lib/: A  A-reserve  A.c  A.sf  math.cpp  math.hpp  vec.c
math/: math-vkvg.h  math.cpp  math.hpp  mod
mx/: array.cpp  design.hpp  hashmap.cpp  iterators.hpp  macros.hpp  map.cpp  meta.hpp  mod  mx-prev.hpp  mx.cpp  mx.hpp  path.cpp  size.cpp  str.cpp  types.cpp  var.cpp
mx/apps/: json.cpp  lambda.cpp  lambda.cpp.bak
mx/res/data/: test.json
overlays/glm/: CMakeLists.txt  mod
overlays/glm/glm/gtc/: random.inl
overlays/glm/glm/gtx/: string_cast.inl
overlays/glm/test/gtx/: gtx_fast_trigonometry.cpp
overlays/libpng/: CMakeLists.txt
rust/a-type/src/: main.rs
silver-import/checkout/: A  libffi  llvm  mbedtls
src/: A  A-classes  A-type  A.c  A.h  a-test.c
src/meta/: A-reflect.c
tapestry/: A  A-reserve  A.c  Makefile  bootstrap.mk  tapestry  tapestry.c  tapestry.h
tapestry/include/: A-init  A-intern  A-methods  A-public
test/: a-test.c  build
test1/: mod  test1.cpp  test1.hpp
translation/: A-translation.c
watch/: mod  watch.cpp  watch.hpp
