cmake_minimum_required    (VERSION 2.8.12)
enable_language           (ASM)
project                   (A)
file                      (GLOB src "${CMAKE_CURRENT_SOURCE_DIR}/src/A.c")
add_compile_options       (-Wno-write-strings -Wno-incompatible-pointer-types -Wfatal-errors -fPIC)
if(APPLE)
    add_compile_options(-I/usr/local/include/)
endif()
set(CMAKE_C_STANDARD      11)
set(CMAKE_C_COMPILER      gcc)
add_library               (A SHARED ${src})
target_link_libraries     (A ffi)
target_include_directories(A PRIVATE . ./src)
install                   (TARGETS A LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install                   (FILES src/A DESTINATION include)
add_executable            (a-test src/a-test.c)
target_link_libraries     (a-test A)
target_include_directories(a-test PRIVATE . ./src)