cmake_minimum_required    (VERSION 3.8)
enable_language           (ASM)
project                   (A)
file                      (GLOB src "${CMAKE_CURRENT_SOURCE_DIR}/src/A.c")
add_compile_options       (-Wno-write-strings -Wno-incompatible-pointer-types -Wfatal-errors -fPIC)
cmake_policy              (SET CMP0042 NEW)
set(CMAKE_C_STANDARD      11)
set(CMAKE_CXX_STANDARD    17)
set(CMAKE_C_COMPILER      clang-18)
set(CMAKE_CXX_COMPILER    clang-18)
#add_link_options          (-fsanitize=address)
add_library               (A SHARED ${src})
target_link_libraries     (A ffi)
target_include_directories(A PRIVATE . ./src)
install                   (TARGETS A LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install                   (FILES src/A DESTINATION include)
add_executable            (a-test src/a-test.c)
target_link_libraries     (a-test A)
target_include_directories(a-test PRIVATE . ./src)